--- a/app/src/main/res/layout/layout_team.xml
+++ b/app/src/main/res/layout/layout_team.xml
@@ -16,7 +16,7 @@
             android:layout_weight="2"
             android:weightSum="2">
             <TextView
-                android:id="@+id/countryName"
+                android:id="@+id/country_name"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"/>
