--- a/app/src/main/res/layout/layout_team.xml
+++ b/app/src/main/res/layout/layout_team.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="4">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
     <ImageView
-        android:id="@+id/contryView"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_weight="2"/>
-        <LinearLayout
-            android:orientation="vertical"
+        android:id="@+id/contry_flag"
+        android:layout_height="100dp"
+        android:layout_width="fill_parent"
+        />
+
+        <TextView
+            android:id="@+id/country_name"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="2"
-            android:weightSum="2">
-            <TextView
-                android:id="@+id/country_name"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"/>
-            <TextView
-                android:id="@+id/alter_name"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"/>
-        </LinearLayout>
+            android:layout_height="20dp"
+            android:gravity="center_vertical|center_horizontal" />
 </LinearLayout>
